src/objects/Product_Group__c.object
<CustomObject>
    <description>Product Group</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <externalId>true</externalId>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManufacturerEnterpriseID__c</fullName>
        <formula>Manufacturer__r.EnterpriseID__c</formula>
        <label>ManufacturerEnterpriseID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturer</description>
        <inlineHelpText>Manufacturer</inlineHelpText>
        <label>Manufacturer</label>
        <referenceTo>MDM_Manufacturer__c</referenceTo>
        <relationshipLabel>Product Groups</relationshipLabel>
        <relationshipName>Product_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Description__c</columns>
        <columns>EnterpriseID__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>ManufacturerEnterpriseID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>